<resources>
<string name="application_name">88Map</string>
<string name="MSG_00_00_00_01">%1$s
88Map has new version been released., do you want to update now?</string>
<string name="MSG_00_00_00_02">※ PS: Map data was changed this time, so please remember redownload offline map after upgrading.</string>
<string name="MSG_00_00_00_03">Map data has new version been released, do you want to update now?</string>
<string name="MSG_00_00_00_04">Please restart 88Map. We will download offine map automaticlly for you in wifi after restarting.</string>
<string name="MSG_00_00_00_05">Versioni upgrade %5$s</string>
<string name="MSG_00_00_00_06">Release note</string>
<string name="MSG_00_00_00_07">Data versioni upgrade</string>
<string name="MSG_00_00_00_08">Skip</string>
<string name="MSG_00_00_00_09">Upgrade</string>
<string name="MSG_00_00_00_10">Upgrade</string>
<string name="MSG_00_00_00_11">OK</string>
<string name="MSG_00_00_00_12">Cancel</string>
<string name="STR_MM_01_00_01_01">System Initializing…</string>
<string name="STR_MM_01_00_01_02">Download base data</string>
<string name="STR_MM_01_00_01_09">OfflineData download</string>
<string name="STR_MM_01_00_01_10">Download</string>
<string name="MSG_01_00_01_01">Operate GPS</string>
<string name="MSG_01_00_01_03">"Don't ask again"</string>
<string name="MSG_01_00_01_04">This application use location data to spot your current place. OK to use your location data?</string>
<string name="MSG_01_00_01_08">Do you want download offline map now?</string>
<string name="MSG_01_00_01_09">Base data has %1$s, it will</string>
<string name="STR_MM_01_00_02_07">1.The route provided is for reference only,pay attention to update electronic navigation map in time.\n 2.For your safety, do not operate the navigation while driving.\n                      3.This product may cost you money for network flow while using it,you should pay the wireless service provider according to their charging standards.</string>
<string name="STR_MM_01_00_02_08">88Map免责声明</string>
<string name="STR_MM_01_00_02_02">"Don't ask again"</string>
<string name="STR_MM_01_00_02_03">NO</string>
<string name="STR_MM_01_00_02_04">Yes</string>
<string name="STR_MM_01_00_02_05">User Terms</string>
<string name="STR_MM_01_01_01_01">Report</string>
<string name="STR_MM_01_01_01_02">Layers</string>
<string name="STR_MM_01_01_01_03">Local</string>
<string name="STR_MM_01_01_01_04">More</string>
<string name="STR_MM_01_01_01_05">Search Maps</string>
<string name="STR_MM_01_01_01_07">Friend Location</string>
<string name="STR_MM_01_01_01_08">Accident</string>
<string name="STR_MM_01_01_01_10">Traffic</string>
<string name="STR_MM_01_01_01_11">Clear Map</string>
<string name="STR_MM_01_01_01_13">The network connection is unusual, please check the network or try again later.</string>
<string name="STR_MM_01_01_01_14">Start time:</string>
<string name="STR_MM_01_01_01_15">End time:</string>
<string name="STR_MM_01_01_01_16">Event:</string>
<string name="STR_MM_01_01_04_01">direction</string>
<string name="STR_MM_01_01_04_02">attention</string>
<string name="STR_MM_01_01_04_03">go straight</string>
<string name="STR_MM_01_01_04_04">turn right</string>
<string name="STR_MM_01_01_04_05">turn left</string>
<string name="STR_MM_01_01_04_06">right front</string>
<string name="STR_MM_01_01_04_07">left front</string>
<string name="STR_MM_01_01_04_08">backward right</string>
<string name="STR_MM_01_01_04_09">backward left</string>
<string name="STR_MM_01_01_04_10">turn back</string>
<string name="STR_MM_01_01_04_11">turn back to the right</string>
<string name="STR_MM_01_01_04_12">StartPoint</string>
<string name="STR_MM_01_01_04_13">Destination</string>
<string name="STR_MM_01_01_04_14">from the StartPoint.......</string>
<string name="STR_MM_01_01_04_15">then</string>
<string name="STR_MM_01_01_04_16">turn into</string>
<string name="STR_MM_01_01_04_17">travel about</string>
<string name="STR_MM_01_01_04_18">drive along</string>
<string name="STR_MM_01_01_04_19">travelabout</string>
<string name="STR_MM_01_01_04_20">(</string>
<string name="STR_MM_01_01_04_21">)</string>
<string name="STR_MM_01_01_04_22">,</string>
<string name="STR_MM_01_01_04_23">direction</string>
<string name="STR_MM_01_01_04_24">toll station</string>
<string name="STR_MM_01_01_04_25">harbour</string>
<string name="STR_MM_01_01_04_26">guiding place</string>
<string name="STR_MM_01_01_04_27"></string>
<string name="STR_MM_01_01_04_28">WayPoint</string>
<string name="STR_MM_01_01_04_29">Attention</string>
<string name="STR_MM_01_01_04_30">Route failed</string>
<string name="STR_MM_01_01_04_31">"Some necessary files for application startup can't be copied. Please check whether there is enough capacity on smarthpne or SD Card."</string>
<string name="STR_MM_01_01_04_32">Notice</string>
<string name="STR_MM_01_01_04_33">Unknown streen name</string>
<string name="STR_MM_01_01_04_34">SD空间不足,无法启动先锋导航.请确认SD卡有足够的空间。</string>
<string name="MSG_01_01_04_01">Changed to the non-toll road.</string>
<string name="MSG_01_01_04_02">Fail to change to the non-toll road.</string>
<string name="MSG_01_01_04_03">Changed to the highway.</string>
<string name="MSG_01_01_04_04">Fail to change to the highway.</string>
<string name="MSG_01_01_04_05">Changed to the nearby non-toll road.</string>
<string name="MSG_01_01_04_06">Fail to change to the nearby non-toll road.</string>
<string name="MSG_01_01_04_07">No road can switch.</string>
<string name="STR_MM_01_02_01_01">More</string>
<string name="STR_MM_01_02_01_02">My Places</string>
<string name="STR_MM_01_02_01_04">Offline Map</string>
<string name="STR_MM_01_02_01_06">Setting</string>
<string name="STR_MM_01_02_01_10">Driving Assistant</string>
<string name="STR_MM_01_02_01_11">Route Profile</string>
<string name="STR_MM_01_02_01_12">Route Preview</string>
<string name="STR_MM_01_02_01_13">Route Edit</string>
<string name="STR_MM_01_02_01_14">Delete Route</string>
<string name="STR_MM_01_02_01_15">Go Home</string>
<string name="STR_MM_01_02_01_16">Go to Company</string>
<string name="STR_MM_01_02_01_17">Home</string>
<string name="STR_MM_01_02_01_18">Company</string>
<string name="STR_MM_01_02_01_19">unknown location</string>
<string name="STR_MM_01_02_01_20">Download offline search</string>
<string name="MSG_01_02_01_01_03">Finish the 88Map?</string>
<string name="MSG_01_02_01_01_04">Finish</string>
<string name="MSG_01_03_01_01_01">Delete Location</string>
<string name="MSG_01_03_01_01_02">Delete all starred locations?</string>
<string name="MSG_01_03_01_02_02">Delete this starred location?</string>
<string name="STR_MM_01_03_01_06">My Places</string>
<string name="STR_MM_01_03_01_07">Starred</string>
<string name="STR_MM_01_03_01_08">Recent</string>
<string name="MSG_01_03_02_01_01">Delete Location</string>
<string name="MSG_01_03_02_01_02">Delete all recent locations?</string>
<string name="MSG_01_03_02_02_02">Delete this recent location?</string>
<string name="MSG_01_03_01_11">Successfully synchronized</string>
<string name="MSG_01_03_01_12">Synchronize failed, please try it later.</string>
<string name="STR_MM_01_03_03_01">Delete</string>
<string name="STR_MM_01_03_03_02">Select all</string>
<string name="STR_MM_01_03_03_03">Starred</string>
<string name="STR_MM_01_03_04_04">Delete</string>
<string name="STR_MM_01_03_04_05">Select all</string>
<string name="STR_MM_01_03_04_06">Recent</string>
<string name="STR_MM_01_04_01_07">%1$%</string>
<string name="STR_MM_01_04_01_23">The Whole Country</string>
<string name="STR_MM_01_04_01_24">Bejing</string>
<string name="STR_MM_01_04_01_25">%1$dM</string>
<string name="STR_MM_01_04_01_26">Shanghai</string>
<string name="STR_MM_01_04_01_28">Tianjin</string>
<string name="STR_MM_01_04_01_30">Chongqing</string>
<string name="STR_MM_01_04_01_32">Anhui</string>
<string name="STR_MM_01_04_01_34">Fujian</string>
<string name="STR_MM_01_04_01_36">Gansu</string>
<string name="STR_MM_01_04_01_38">Guangdong</string>
<string name="STR_MM_01_04_01_40">Guangxi</string>
<string name="STR_MM_01_04_01_42">Guizhou</string>
<string name="STR_MM_06_01_01_02">Map navigation</string>
<string name="STR_MM_06_01_01_09">Camera alert</string>
<string name="STR_MM_06_01_01_81">Account syncing</string>
<string name="STR_MM_06_01_01_91">Help</string>
<string name="STR_MM_06_01_01_92">Version information</string>
<string name="STR_MM_06_01_01_93">Service terms</string>
<string name="STR_MM_06_01_01_131">APL version：</string>
<string name="STR_MM_06_01_01_132">Map color change</string>
<string name="STR_MM_06_01_01_136">Map font size</string>
<string name="STR_MM_06_01_01_140">Copyright </string>
<string name="STR_MM_06_01_01_141">Data productor </string>
<string name="STR_MM_06_01_01_142">TTS engine </string>
<string name="STR_MM_06_01_01_143">Map copyright </string>
<string name="STR_MM_06_01_01_144">Map check </string>
<string name="STR_MM_06_01_01_145">PSET</string>
<string name="STR_MM_06_01_01_146">AutoNavi</string>
<string name="STR_MM_06_01_01_147">KeDA</string>
<string name="STR_MM_06_01_01_148">PSET Digital Map</string>
<string name="STR_MM_06_01_01_149">\n地图版本说明：\n\n
*本产品的地图上的各级界线示意性表示，不作为划界依据。\n
* 钓鱼岛、赤尾屿及南海诸岛等中国岛屿已在地图数据库中表示。\n
*香港特别行政区、澳门特别行政区、台湾省详细交通资料暂缺。</string>
<string name="STR_MM_06_01_01_150">Cradle Setting</string>
<string name="STR_MM_06_01_01_151">GPS Setting</string>
<string name="STR_MM_06_01_01_155">Clear buffer</string>
<string name="STR_MM_06_01_01_156">HUD settings</string>
<string name="STR_MM_06_01_01_157">Show LogoMark</string>
<string name="STR_MM_06_01_01_158">Show Traffic info</string>
<string name="STR_MM_06_01_01_159">Show Traffic restrict</string>
<string name="STR_MM_06_01_01_160">Show Speed Camera</string>
<string name="STR_MM_06_01_01_161">24H</string>
<string name="STR_MM_06_01_01_162">LogoMark setting</string>
<string name="STR_MM_06_01_01_164">V  1.0.2012.0021</string>
<string name="STR_MM_06_01_01_165">ISBN 978-7-900278-84-5</string>
<string name="STR_MM_06_01_01_166">GS（2012）3183号</string>
<string name="STR_MM_06_02_02_16">Logon ID</string>
<string name="STR_MM_06_02_02_17">Bound Sina weibo</string>
<string name="STR_MM_06_02_02_23">Account syncing</string>
<string name="STR_MM_06_02_02_24">Synchronizing frequency</string>
<string name="STR_MM_06_02_02_28">Initialize default setting</string>
<string name="STR_MM_06_02_02_42">Petrol Station</string>
<string name="STR_MM_06_02_02_43">Car Park</string>
<string name="STR_MM_06_02_02_44">Hotel</string>
<string name="STR_MM_06_02_02_45">Bank</string>
<string name="STR_MM_06_02_02_46">Station</string>
<string name="STR_MM_06_02_02_47">Post Office</string>
<string name="STR_MM_06_02_02_48">Restaurant</string>
<string name="STR_MM_06_02_02_49">Burgers</string>
<string name="STR_MM_06_02_02_50">Coffee</string>
<string name="STR_MM_06_02_02_51">Hospital</string>
<string name="STR_MM_06_02_02_52">Pharmacy</string>
<string name="STR_MM_06_02_02_53">Shopping</string>
<string name="STR_MM_06_02_02_54">Clothing Store</string>
<string name="STR_MM_06_02_02_55">Consumer Electronic Store</string>
<string name="STR_MM_06_02_02_56">Home Specialty Store</string>
<string name="STR_MM_06_02_02_57">Enterainment</string>
<string name="STR_MM_06_02_02_58">Family Restaurant</string>
<string name="STR_MM_06_02_03_01">Version check</string>
<string name="STR_MM_06_02_04_01">Change Password</string>
<string name="STR_MM_06_02_07_01">Open source licenses</string>
<string name="STR_MM_10_01_01_05">Driving report</string>
<string name="STR_MM_10_01_01_06">Driving ranking list</string>
<string name="STR_MM_10_01_01_07">Driving recording</string>
<string name="STR_MM_10_01_01_16">Driving analyse</string>
<string name="STR_MM_10_01_01_17">More</string>
<string name="STR_MM_10_02_02_17">Compare in detail</string>
<string name="STR_MM_10_02_02_18">Last time</string>
<string name="STR_MM_10_02_02_19">This time</string>
<string name="STR_COM_053">Start time</string>
</resources>