<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory android:title="@string/STR_MM_06_02_02_23" android:key="account">
         <com.billionav.navi.component.basiccomponent.ListPreference 
	   		android:key="frequency"
	       android:title="@string/STR_MM_06_02_02_24"
	       android:summary=""
	       android:dialogTitle="@string/STR_MM_06_02_02_24"
	       />
         <PreferenceScreen android:title="@string/STR_MM_06_02_02_17" android:key="weibo"></PreferenceScreen>
         <PreferenceScreen android:title="@string/STR_MM_06_02_02_28" android:key="defaultvalue"></PreferenceScreen>
           <PreferenceScreen android:title="@string/STR_MM_06_02_04_01" android:key="password"></PreferenceScreen>
         <PreferenceScreen android:title="@string/STR_MM_06_02_02_16" android:key="login"></PreferenceScreen>
    </PreferenceCategory>
    

</PreferenceScreen>