<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" android:key="rootPreference">
    <PreferenceCategory android:title="@string/STR_MM_06_01_01_02" android:key="mapnavi">

    <!-- 	<PreferenceScreen android:title="@string/STR_COM_037" android:key="schedule"></PreferenceScreen> -->

    	<com.billionav.navi.component.basiccomponent.ListPreference
   			android:key="scheduletime"
	       android:title="@string/STR_COM_053"
	       android:summary=""
	       android:dialogTitle="@string/STR_COM_053"      
	      />
          <com.billionav.navi.component.basiccomponent.ListPreference
   			android:key="mapcolor"
	       android:title="@string/STR_MM_06_01_01_132"
	       android:summary=""
	       android:dialogTitle="@string/STR_MM_06_01_01_132"      
	       />
          <com.billionav.navi.component.basiccomponent.ListPreference 
	   		android:key="mapfontsize"
	       android:title="@string/STR_MM_06_01_01_136"
	       android:summary=""
	       android:dialogTitle="@string/STR_MM_06_01_01_136"      
	       />
	       <!-- 
        <com.billionav.navi.component.basiccomponent.ListPreference 
	   		android:key="voicetip"
	       android:title="@string/STR_MM_06_01_01_97"
	       android:summary=""
	       android:dialogTitle="@string/STR_MM_06_01_01_97"      
	       />
	       -->
        <CheckBoxPreference android:key="cameratip" android:title="@string/STR_MM_06_01_01_09"/>
    </PreferenceCategory>
    <!--  
    <PreferenceCategory android:title="@string/STR_MM_06_01_01_13" android:key="drivingsafe">
         <CheckBoxPreference android:key="record" android:title="@string/STR_MM_06_01_01_125" />
         <com.billionav.navi.component.basiccomponent.ListPreference 
	   		android:key="distanceshow"
	       android:title="@string/STR_MM_06_01_01_102"
	       android:summary=""
	       android:dialogTitle="@string/STR_MM_06_01_01_102"
	       />
          <com.billionav.navi.component.basiccomponent.ListPreference 
	   		android:key="crashtime"
	       android:title="@string/STR_MM_06_01_01_105"
	       android:summary=""
	       android:dialogTitle="@string/STR_MM_06_01_01_105"
	       />
          <com.billionav.navi.component.basiccomponent.ListPreference 
	   		android:key="settingcarhigh"
	       android:title="@string/STR_MM_06_01_01_106"
	       android:summary=""
	       android:dialogTitle="@string/STR_MM_06_01_01_106"
	       />    
    </PreferenceCategory>
     <PreferenceCategory android:title="@string/STR_MM_06_01_01_43" android:key="drivingrecord">
        <com.billionav.navi.component.basiccomponent.ListPreference 
	   		android:key="videomode"
	       android:title="@string/STR_MM_06_01_01_47"
	       android:summary=""
	       android:dialogTitle="@string/STR_MM_06_01_01_47"
	       />
         <com.billionav.navi.component.basiccomponent.ListPreference 
	   		android:key="videomode"
	       android:title="@string/STR_MM_06_01_01_47"
	       android:summary=""
	       android:dialogTitle="@string/STR_MM_06_01_01_47"
	       />
              <com.billionav.navi.component.basiccomponent.ListPreference 
	   		android:key="videosavemode"
	       android:title="@string/STR_MM_06_01_01_109"
	       android:summary=""
	       android:dialogTitle="@string/STR_MM_06_01_01_109"
	       />
  <com.billionav.navi.component.basiccomponent.ListPreference 
	   		android:key="videospace"
	       android:title="@string/STR_MM_06_01_01_112"
	       android:summary=""
	       android:dialogTitle="@string/STR_MM_06_01_01_112"
	       />
   
   <CheckBoxPreference android:key="autoupload" android:title="@string/STR_MM_06_01_01_119"/>

              
    </PreferenceCategory>
       -->
     <!-- 
     <PreferenceCategory android:key="language" android:title="@string/STR_MM_06_01_01_126">
          <com.billionav.navi.component.basiccomponent.ListPreference android:key="currentlanguage" android:title="@string/STR_MM_06_01_01_127" android:summary="" android:dialogTitle="@string/STR_MM_06_01_01_127" />
     </PreferenceCategory>
	 -->
     <PreferenceCategory android:title="@string/STR_MM_06_01_01_81" android:key="Accountsynchronous">
         <!-- 
         <CheckBoxPreference android:key="myfavorite" android:title="@string/STR_MM_06_01_01_120"/>
         <CheckBoxPreference android:key="history" android:title="@string/STR_MM_06_01_01_121"/>
         <PreferenceScreen android:key="moreinfo" android:title="@string/STR_MM_06_01_01_84"/>
         -->
         <PreferenceScreen android:title="@string/STR_MM_06_02_04_01" android:key="password"></PreferenceScreen>
         <PreferenceScreen android:title="@string/STR_MM_06_02_02_16" android:key="login"></PreferenceScreen>
         
     </PreferenceCategory>
     <PreferenceCategory android:title="@string/STR_MM_06_01_01_91" android:key="help">
        <PreferenceScreen android:title="@string/STR_MM_06_01_01_92" android:key="versioninfo"></PreferenceScreen>
        <PreferenceScreen android:title="@string/STR_MM_01_00_02_05" android:key="disclaimer"></PreferenceScreen>
        <PreferenceScreen android:title="@string/STR_MM_06_01_01_93" android:key="serviceinfo"></PreferenceScreen>
   		<PreferenceScreen android:title="@string/STR_MM_06_02_07_01" android:key="licence"></PreferenceScreen>
   		<PreferenceScreen android:title="@string/STR_MM_06_01_01_155" android:key="clearbuffer"></PreferenceScreen>
<!-- 		<PreferenceScreen android:title="@string/STR_MM_06_02_02_28" android:key="defaultvalue"></PreferenceScreen> -->   
     </PreferenceCategory>
     <!--  
     <PreferenceCategory android:title="Cradle" android:key="cradle">
         <PreferenceScreen android:title="bluetooth" android:key="bluetooth"></PreferenceScreen>
          <com.billionav.navi.component.basiccomponent.BluetoothListPreference 
	   		android:key="switchgps"
	       android:title="switch gps"
	       android:summary=""
	       android:dialogTitle="switch gps"
	       />
            <PreferenceScreen android:title="Cradle Setting" android:key="cradlesetting"></PreferenceScreen>
     </PreferenceCategory>
     -->
     <PreferenceCategory android:title="@string/STR_MM_06_01_01_150" android:key="cradlepreferencecategory">
         <com.billionav.navi.component.basiccomponent.ListPreference 
	   	   android:key="switchgpssetting"
	       android:title="@string/STR_MM_06_01_01_151"
	       android:dialogTitle="@string/STR_MM_06_01_01_150"      
	       />
	</PreferenceCategory>
     
     <PreferenceCategory android:title="@string/STR_MM_06_01_01_156" android:key="HUD">
         <CheckBoxPreference android:title="@string/STR_MM_06_01_01_157" android:key="hud_poi" />
        
         <CheckBoxPreference android:title="@string/STR_MM_06_01_01_158" android:key="hud_trafficInfo"/>
         
         <CheckBoxPreference android:title="@string/STR_MM_06_01_01_159" android:key="hud_trafficRestrict"/>
         
      	 <CheckBoxPreference android:title="@string/STR_MM_06_01_01_160" android:key="hud_speedcamera"/>
        
      	 <CheckBoxPreference android:title="@string/STR_MM_06_01_01_161" android:key="hud_time"/>
         
         <PreferenceScreen android:title="@string/STR_MM_06_01_01_162" android:key="hud_logomark"/>
      
     </PreferenceCategory>
     <PreferenceCategory android:title="Debug" android:key="debug">
         <PreferenceScreen android:title="Debug" android:key="debugset">
        
         </PreferenceScreen>
         <PreferenceScreen android:title="IRDR Debug" android:key="irdrdebug">
         </PreferenceScreen>
         <PreferenceScreen android:title="Sensor Debug" android:key="sensordebug">
         </PreferenceScreen>
         <PreferenceScreen android:title="Debug Off" android:key="debugoff">
         </PreferenceScreen>
     </PreferenceCategory>
    
     

</PreferenceScreen>