<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" android:layout_height="match_parent"
	android:scrollbars="vertical" android:orientation="vertical">
	<ScrollView android:layout_width="match_parent"
		android:layout_height="match_parent" android:layout_centerInParent="true"
		android:padding="7dp">
		<RelativeLayout android:layout_width="match_parent"
			android:layout_height="wrap_content">
			<LinearLayout android:id="@+id/version_layout_01"
				android:layout_width="match_parent" android:layout_height="wrap_content"
				android:orientation="vertical" android:layout_marginTop="35dip"
				android:layout_marginLeft="10dip">
				<LinearLayout android:layout_width="match_parent"
					android:layout_height="wrap_content" android:orientation="horizontal">
					<TextView android:layout_width="wrap_content"
						android:layout_height="wrap_content" android:text="@string/STR_MM_06_01_01_140"
						android:textSize="16dip"></TextView>
					<TextView android:layout_width="wrap_content"
						android:layout_height="wrap_content" android:text="@string/STR_MM_06_01_01_145"
						android:textSize="16dip"></TextView>
				</LinearLayout>

				<LinearLayout android:layout_width="match_parent"
					android:layout_height="wrap_content" android:orientation="horizontal">
					<TextView android:layout_width="wrap_content"
						android:layout_height="wrap_content" android:text="@string/STR_MM_06_01_01_141"
						android:textSize="16dip"></TextView>
					<TextView android:layout_width="wrap_content"
						android:layout_height="wrap_content" android:text="@string/STR_MM_06_01_01_146"
						android:textSize="16dip"></TextView>
				</LinearLayout>

				<LinearLayout android:layout_width="match_parent"
					android:layout_height="wrap_content" android:orientation="horizontal">
					<TextView android:layout_width="wrap_content"
						android:layout_height="wrap_content" android:text="@string/STR_MM_06_01_01_142"
						android:textSize="16dip"></TextView>
					<TextView android:layout_width="wrap_content"
						android:layout_height="wrap_content" android:text="@string/STR_MM_06_01_01_147"
						android:textSize="16dip"></TextView>
				</LinearLayout>
			</LinearLayout>


			<LinearLayout android:id="@+id/version_layout_02"
				android:layout_below="@id/version_layout_01" android:layout_width="match_parent"
				android:layout_height="wrap_content" android:orientation="vertical"
				android:layout_marginTop="35dip" android:layout_marginLeft="10dip">
				<LinearLayout android:layout_width="match_parent"
					android:layout_height="wrap_content" android:orientation="horizontal">
					<TextView android:layout_width="wrap_content"
						android:layout_height="wrap_content" android:text="@string/STR_MM_06_01_01_131"
						android:textSize="16dip"></TextView>
					<TextView android:id="@+id/version_apkversion"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:text="@string/STR_MM_06_01_01_164" android:textSize="16dip"></TextView>
				</LinearLayout>

				<LinearLayout android:id="@+id/version_cameraversion_layout" android:layout_width="match_parent"
					android:layout_height="wrap_content" android:orientation="horizontal" android:visibility="gone">
					<TextView android:layout_width="wrap_content"
						android:layout_height="wrap_content" android:text="@string/STR_MM_06_01_01_170"
						android:textSize="16dip"></TextView>
					<TextView android:id="@+id/version_cameraversion"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:text="version" android:textSize="16dip"></TextView>
				</LinearLayout>

				<LinearLayout android:layout_width="match_parent"
					android:layout_height="wrap_content" android:orientation="horizontal">
					<LinearLayout android:layout_width="match_parent"
						android:layout_height="wrap_content" android:orientation="vertical"
						android:layout_weight="1">
						<TextView android:layout_width="wrap_content"
							android:layout_height="wrap_content" android:text="@string/STR_MM_06_01_01_143"
							android:textSize="16dip"></TextView>
					</LinearLayout>
					<LinearLayout android:layout_width="match_parent"
						android:layout_height="wrap_content" android:orientation="vertical"
						android:layout_weight="1">
						<TextView android:id="@+id/version_check_textview"
							android:layout_width="wrap_content" android:layout_height="wrap_content"
							android:text="@string/STR_MM_06_02_03_01" android:layout_gravity="right"
							android:layout_marginRight="10dip" android:textColor="#1322f0"
							android:textSize="16dip"></TextView>
					</LinearLayout>
				</LinearLayout>

				<LinearLayout android:layout_width="match_parent"
					android:layout_height="wrap_content" android:layout_marginLeft="60dip"
					android:orientation="vertical">
					<TextView android:layout_width="wrap_content"
						android:layout_height="wrap_content" android:text="@string/STR_MM_06_01_01_148"
						android:textSize="16dip"></TextView>
					<TextView android:layout_width="wrap_content"
						android:layout_height="wrap_content" android:text="@string/STR_MM_06_01_01_165"
						android:textSize="16dip"></TextView>
					<LinearLayout android:layout_width="match_parent"
						android:layout_height="wrap_content" android:orientation="horizontal">
						<TextView android:layout_width="wrap_content"
							android:layout_height="wrap_content" android:text="@string/STR_MM_06_01_01_144"
							android:textSize="16dip"></TextView>
						<TextView android:layout_width="wrap_content"
							android:layout_height="wrap_content" android:text="@string/STR_MM_06_01_01_166"
							android:textSize="16dip"></TextView>
					</LinearLayout>
				</LinearLayout>
			</LinearLayout>


			<LinearLayout android:id="@+id/version_layout_03"
				android:layout_below="@id/version_layout_02" android:layout_width="match_parent"
				android:layout_height="wrap_content" android:orientation="vertical"
				android:layout_marginTop="35dip" android:layout_marginLeft="10dip">
				<LinearLayout android:layout_width="match_parent"
					android:layout_height="wrap_content" android:orientation="vertical">
					<TextView android:layout_width="wrap_content"
						android:layout_height="wrap_content" android:text="@string/STR_MM_06_01_01_149"
						android:textSize="16dip"></TextView>
					<TextView android:id="@+id/version_declaration"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:text="@string/STR_MM_06_01_01_168" android:textSize="16dip"
						android:visibility="gone"></TextView>
					<TextView android:id="@+id/version_declaration_link"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:text="@string/STR_MM_06_01_01_169" android:textSize="16dip"
						android:textColor="#1322f0" android:visibility="gone"></TextView>
				</LinearLayout>
			</LinearLayout>
		</RelativeLayout>
	</ScrollView>
</LinearLayout>
